# face-sdk

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: ncnn_utils.cmake
include/gawrs_face/common/: config.h  image_frame.h  logger.h  version.h
include/gawrs_face/sdk_interface/: error_code.h  sdk_interface.h  sdk_types.h
include/gawrs_face/services/: face_engine.h  ncnn_inference.h
include/gawrs_face/services/calculator/: nms.h
include/gawrs_face/services/detector/: scrfd.h
include/gawrs_face/services/extractor/: mobilefacenet.h
include/gawrs_face/types/: anchor.h  detection.h  dim.h  face_feature.h  image_format.h  point2.h  rectangle.h  vector.h
include/gawrs_face/utilities/: aligned_malloc_and_free.h  face_align.h  rotation_helper.h  similarity.h  singleton.hpp
java/com/gawrs/face/: App.java  EngineConfiguration.java  ErrorInfo.java  FaceFeature.java  FaceInfo.java  FaceKit.java  FaceSimilar.java  ImageFactory.java  ImageFormat.java  ImageInfo.java  Pointf.java  Rectf.java  RotationModel.java  RuntimeModel.java  VersionInfo.java
jni/: CMakeLists.txt  com_gawrs_face_FaceKit.cc  com_gawrs_face_FaceKit.h  jni_face_feature.h  jni_face_info.h  jni_face_kit.h  jni_list.h  jni_similar.h  jni_utils.h  jni_version_info.h
python_api/: CMakeLists.txt  main.cc
samples/: CMakeLists.txt
samples/detection/: CMakeLists.txt  main.cc
samples/extractor/: CMakeLists.txt  main.cc
samples/face_engine/: CMakeLists.txt  main.cc
samples/hello/: CMakeLists.txt  main.cc
src/: sdk_interface.cc
src/common/: image_frame.cc  version.cc
src/services/: face_engine.cc  ncnn_inference.cc
src/services/calculator/: nms.cc
src/services/detector/: scrfd.cc
src/services/extractor/: mobilefacenet.cc
src/utilities/: face_align.cc  rotation_helper.cc  similarity.cc
tests/: CMakeLists.txt
